# web-panic

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
examples/: example.rs  index.rs
html/: example.js  example_bg.wasm  index.html  web-panic_bg.wasm
src/: lib.rs
